# pdf

./: CMakeLists.txt  main.cpp  main.qml
pdfwidgets/: qpdfview.cpp  qpdfview_p.h
